--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -58,10 +58,10 @@ jobs:
             dependencies: "geos-utils"
           - package-name: geos-mesh
             dependencies: "geos-utils geos-geomechanics"
-          - package-name: geos-posp
-            dependencies: "geos-utils geos-mesh geos-geomechanics"
           - package-name: geos-processing
-            dependencies: "geos-utils geos-mesh geos-geomechanics geos-posp"
+            dependencies: "geos-utils geos-mesh geos-geomechanics"
+          - package-name: geos-posp
+            dependencies: "geos-utils geos-mesh geos-geomechanics, geos-processing"
           - package-name: pygeos-tools
             dependencies: "geos-utils geos-mesh"
           - package-name: geos-timehistory
