--- a/.github/workflows/test_geos_integration.yml
+++ b/.github/workflows/test_geos_integration.yml
@@ -30,7 +30,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     
-    container: 
+    container:
+      # using this image to get access to python 3.10+
       image: geosx/ubuntu22.04-gcc12:${{ needs.setup.outputs.tag }}
 
     steps:
@@ -83,6 +84,8 @@ jobs:
         mkdir -p build_test
     
     - name: "Configure GEOS"
+      # This configuration enables PyGEOSX and disables unneeded components, like physics solvers.
+      # We make sure to pass the current branch name of geosPythonPackages to GEOS so it can configure correctly.
       working-directory: ./GEOS
       run: |
         echo "=== Configuring GEOS Build ==="
@@ -133,7 +136,6 @@ jobs:
         cp "$SETUP_PYTHON_ENVIRONMENT_SCRIPT" "$TEMP_SETUP_SCRIPT"
         
         # Add /usr/local/bin to the MOD_SEARCH_PATH array right after the python bin directory
-        # The original line looks like: declare -a MOD_SEARCH_PATH=("$(dirname $PYTHON_TARGET)"
         # We insert /usr/local/bin as the second entry
         sed -i '/^declare -a MOD_SEARCH_PATH=.*PYTHON_TARGET)"/a\                            "/usr/local/bin"' "$TEMP_SETUP_SCRIPT"
         
@@ -197,7 +199,6 @@ jobs:
         echo "=== Test 4: make geosx_python_tools_test ==="
         
         # The test requires python/geosx/bin/test_geosx_xml_tools to exist
-        # Let's check what this script should be and create the proper structure
         echo "Creating required python environment structure..."
         mkdir -p python/geosx/bin
         
@@ -228,7 +229,6 @@ jobs:
         echo "Running geosx_python_tools_test..."
         
         # The test runs from python/ directory and the cleanup expects files to exist there
-        # Let's run the test and then handle the cleanup properly
         cd python
         
         # Run the actual test script directly to generate the expected output files
@@ -263,7 +263,13 @@ jobs:
         # The geosx_format_all_xml_files target has a bug - it depends on 'geosx_xml_tools' which doesn't exist
         # It should depend on 'geosx_python_tools'. Since we can't modify the CMakeLists.txt,
         # we'll run the formatting command directly instead
-        
+        # To solve the bug in cmake, we would have to change:
+        # add_custom_target( geosx_format_all_xml_files
+        #           COMMAND bash ${CMAKE_SOURCE_DIR}/../scripts/formatXMLFiles.bash -g ${CMAKE_BINARY_DIR}/bin/format_xml ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/../examples
+        #           WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+        #           DEPENDS geosx_python_tools  # ← Change this!
+        #         )
+
         echo "Running XML formatting directly (bypassing broken make target)..."
         if [ -f "bin/format_xml" ] && [ -f "$GEOS_ROOT/scripts/formatXMLFiles.bash" ]; then
           bash "$GEOS_ROOT/scripts/formatXMLFiles.bash" -g "$(pwd)/bin/format_xml" "$GEOS_ROOT/src" "$GEOS_ROOT/examples"
