--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -101,11 +101,31 @@ jobs:
       # wrap pytest to avoid error when no tests in the package
         sh -c 'python -m pytest ./${{ matrix.package-name }}; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
 
+  # check if GEOS has label for testing GEOS integration
+  check_integration_label:
+    runs-on: ubuntu-latest
+    outputs:
+      has_geos_integration_label: ${{ steps.set-label.outputs.has_label }}
+    steps:
+      - name: Check if PR has 'test-geos-integration' label
+        id: set-label
+        run: |
+          echo "Checking for label..."
+          LABEL_FOUND=false
+          for label in "${{ toJson(github.event.pull_request.labels) }}"; do
+            if [[ "$label" == *"test-geos-integration"* ]]; then
+              LABEL_FOUND=true
+              break
+            fi
+          done
+          echo "has_label=$LABEL_FOUND" >> $GITHUB_OUTPUT
+
+
   # Step 3: Check if GEOS integration is required based on changed files
   check_geos_integration_required:
     name: Check GEOS Integration Required
     runs-on: ubuntu-latest
-    needs: [semantic_pull_request, build]
+    needs: [build]
     if: github.event_name == 'pull_request'
     outputs:
       geos_integration_required: ${{ steps.check_changes.outputs.required }}
@@ -159,17 +179,7 @@ jobs:
           "^geos-trame/"
           "^geos-xml-viewer/"
         )
-        
-        # Check if label is present (overrides automatic detection)
-        HAS_LABEL=$(echo '${{ toJson(github.event.pull_request.labels.*.name) }}' | grep -q "test-geos-integration" && echo "true" || echo "false")
-        
-        if [[ "$HAS_LABEL" == "true" ]]; then
-          echo "✓ Label 'test-geos-integration' found - GEOS integration test will run"
-          echo "required=true" >> "$GITHUB_OUTPUT"
-          echo "skip_reason=none" >> "$GITHUB_OUTPUT"
-          exit 0
-        fi
-        
+
         # Check if any changed file affects GEOS-integrated packages
         REQUIRES_GEOS_TEST=false
         AFFECTED_PACKAGES=""
@@ -226,9 +236,16 @@ jobs:
   # Step 4: Run GEOS integration tests (only if required or label present)
   geos_integration_test:
     name: GEOS Integration Test
-    needs: [check_geos_integration_required]
-    if: needs.check_geos_integration_required.outputs.geos_integration_required == 'true'
+    needs: [check_geos_integration_required,check_integration_label]
+    if: ${{needs.check_geos_integration_required.outputs.geos_integration_required == 'true' }} && ${{ needs.check_integration_label.outputs.has_geos_integration_label == 'true' }}
     uses: ./.github/workflows/test_geos_integration.yml
+  
+  # warn if not used
+  geos_integration_test_fail:
+    name: GEOS Integration Test
+    needs: [check_geos_integration_required,check_integration_label]
+    if: ${{needs.check_geos_integration_required.outputs.geos_integration_required == 'true' }} && ${{ needs.check_integration_label.outputs.has_geos_integration_label == 'false' }}
+    uses: echo "You need to test for GEOS-integration please add 'test-geos-integration' label and rerun the CI"
 
   # Final validation - Summarize CI results
   final_validation:
