--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,6 +36,7 @@ jobs:
   # build and test the standalone CI
   build:
     runs-on: ubuntu-latest
+    needs: [semantic_pull_request]
     if: ${{ !github.event.pull_request.draft }}
     strategy:
       fail-fast: false
@@ -104,6 +105,7 @@ jobs:
   # check if GEOS has label for testing GEOS integration
   check_integration_label:
     runs-on: ubuntu-latest
+    needs: [build]
     outputs:
       has_geos_integration_label: ${{ steps.set-label.outputs.has_label }}
     steps:
@@ -135,7 +137,6 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0  # Fetch all history to compare with base branch
-    
     - name: Check if GEOS integration is required
       id: check_changes
       run: |
@@ -240,16 +241,16 @@ jobs:
     if: ${{needs.check_geos_integration_required.outputs.geos_integration_required == 'true' }} && ${{ needs.check_integration_label.outputs.has_geos_integration_label == 'true' }}
     uses: ./.github/workflows/test_geos_integration.yml
   
-  # warn if not used
-  geos_integration_test_fail:
-    name: GEOS Integration Test
-    runs-on: ubuntu-latest
-    needs: [check_geos_integration_required,check_integration_label]
-    if: ${{needs.check_geos_integration_required.outputs.geos_integration_required == 'true' }} && ${{ needs.check_integration_label.outputs.has_geos_integration_label == 'false' }}
-    steps:
-    - name: Send an error is GEOS-integration is required but no flag is detected
-      id: send_missing_flag_error
-      run: echo "You need to test for GEOS-integration please add /test-geos-integration/ label and rerun the CI"
+  # # warn if not used
+  # geos_integration_test_fail:
+  #   name: GEOS Integration Test
+  #   runs-on: ubuntu-latest
+  #   needs: [check_geos_integration_required,check_integration_label]
+  #   if: ${{needs.check_geos_integration_required.outputs.geos_integration_required == 'true' }} && ${{ needs.check_integration_label.outputs.has_geos_integration_label == 'false' }}
+  #   steps:
+  #   - name: Send an error is GEOS-integration is required but no flag is detected
+  #     id: send_missing_flag_error
+  #     run: echo "You need to test for GEOS-integration please add /test-geos-integration/ label and rerun the CI"
 
   # Final validation - Summarize CI results
   final_validation:
